feat: Home Assistant 디스커버리 문서 및 테스트를 추가하고, 엔티티별 설정과 상태 병합 로직을 개선하며, 개발 환경에 MQTT Explorer를 포함합니다.

--- a/deploy/docker/docker-compose.dev.yml
+++ b/deploy/docker/docker-compose.dev.yml
@@ -14,10 +14,22 @@ services:
     container_name: rs485-mqtt-dev
     ports:
       - '1883:1883'
+      - '9001:9001'
     volumes:
       - mosquitto_data:/mosquitto/data
       - mosquitto_log:/mosquitto/log
       - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+    restart: unless-stopped
+
+
+  mqtt-explorer:
+    image: smeagolworms4/mqtt-explorer
+    container_name: rs485-mqtt-explorer-dev
+    ports:
+      - '9000:4000'
+    depends_on:
+      mq:
+        condition: service_started
     restart: unless-stopped
 
   homeassistant:
