--- a/packages/core/config/samsung_sds.homenet_bridge.yaml
+++ b/packages/core/config/samsung_sds.homenet_bridge.yaml
@@ -24,7 +24,7 @@ homenet_bridge:
   light:
     - name: 'Light 1'
       state:
-        data: [0x79, 0x31]
+        data: [0x79, 0x21]
       state_on:
         offset: 2
         data: [0x01]
@@ -35,14 +35,14 @@ homenet_bridge:
         mask: [0x01]
       command_on:
         data: [0xAC, 0x7A, 0x01, 0x01]
-        ack: [0x7A, 0x01, 0x01]
+        ack: [0x79, 0x01, 0x01]
       command_off:
         data: [0xAC, 0x7A, 0x01, 0x00]
-        ack: [0x7A, 0x01, 0x00]
+        ack: [0x79, 0x01, 0x00]
 
     - name: 'Light 2'
       state:
-        data: [0x79, 0x31]
+        data: [0x79, 0x13]
       state_on:
         offset: 2
         data: [0x02]
@@ -52,33 +52,15 @@ homenet_bridge:
         data: [0x00]
         mask: [0x02]
       command_on:
-        data: [0xAC, 0x7A, 0x02, 0x01]
-        ack: [0x7A, 0x02, 0x01]
+        data: [0xAC, 0x7A, 0x03, 0x01]
+        ack: [0x79, 0x03, 0x01]
       command_off:
-        data: [0xAC, 0x7A, 0x02, 0x00]
-        ack: [0x7A, 0x02, 0x00]
+        data: [0xAC, 0x7A, 0x03, 0x00]
+        ack: [0x79, 0x03, 0x00]
 
     - name: 'Light 3'
       state:
-        data: [0x79, 0x31]
-      state_on:
-        offset: 2
-        data: [0x04]
-        mask: [0x04]
-      state_off:
-        offset: 2
-        data: [0x00]
-        mask: [0x04]
-      command_on:
-        data: [0xAC, 0x7A, 0x03, 0x01]
-        ack: [0x7A, 0x03, 0x01]
-      command_off:
-        data: [0xAC, 0x7A, 0x03, 0x00]
-        ack: [0x7A, 0x03, 0x00]
-
-    - name: 'Light 4'
-      state:
-        data: [0x79, 0x24]
+        data: [0x79, 0x14]
       state_on:
         offset: 2
         data: [0x01]
@@ -89,28 +71,28 @@ homenet_bridge:
         mask: [0x01]
       command_on:
         data: [0xAC, 0x7A, 0x04, 0x01]
-        ack: [0x7A, 0x04, 0x01]
+        ack: [0x79, 0x04, 0x01]
       command_off:
         data: [0xAC, 0x7A, 0x04, 0x00]
-        ack: [0x7A, 0x04, 0x00]
+        ack: [0x79, 0x04, 0x00]
 
-    - name: 'Light 5'
+    - name: 'Light 4'
       state:
-        data: [0x79, 0x24]
+        data: [0x79, 0x15]
       state_on:
         offset: 2
-        data: [0x02]
-        mask: [0x02]
+        data: [0x01]
+        mask: [0x01]
       state_off:
         offset: 2
         data: [0x00]
-        mask: [0x02]
+        mask: [0x01]
       command_on:
         data: [0xAC, 0x7A, 0x05, 0x01]
-        ack: [0x7A, 0x05, 0x01]
+        ack: [0x79, 0x05, 0x01]
       command_off:
         data: [0xAC, 0x7A, 0x05, 0x00]
-        ack: [0x7A, 0x05, 0x00]
+        ack: [0x79, 0x05, 0x00]
 
   climate:
     - name: 'Room 0 Heater'
@@ -141,8 +123,8 @@ homenet_bridge:
         data: [0xAE, 0x7D, 0x01, 0x01, 0x00, 0x00, 0x00]
         ack: [0x7D, 0x01, 0x01]
       command_temperature: !lambda |-
-        uint8_t target = x;
-        return {{0xAE, 0x7F, 0x01, target, 0x00, 0x00, 0x00},{0x7F, 0x01, target}};
+        const target = x;
+        return [[0xAE, 0x7F, 0x01, target, 0x00, 0x00, 0x00],[0x7F, 0x01, target]];
 
     - name: 'Room 1 Heater'
       visual:
@@ -172,8 +154,8 @@ homenet_bridge:
         data: [0xAE, 0x7D, 0x02, 0x01, 0x00, 0x00, 0x00]
         ack: [0x7D, 0x02, 0x01]
       command_temperature: !lambda |-
-        uint8_t target = x;
-        return {{0xAE, 0x7F, 0x02, target, 0x00, 0x00, 0x00},{0x7F, 0x02, target}};
+        const target = x;
+        return [[0xAE, 0x7F, 0x02, target, 0x00, 0x00, 0x00],[0x7F, 0x02, target]];
 
     - name: 'Room 2 Heater'
       visual:
@@ -203,8 +185,8 @@ homenet_bridge:
         data: [0xAE, 0x7D, 0x03, 0x01, 0x00, 0x00, 0x00]
         ack: [0x7D, 0x03, 0x01]
       command_temperature: !lambda |-
-        uint8_t target = x;
-        return {{0xAE, 0x7F, 0x03, target, 0x00, 0x00, 0x00},{0x7F, 0x03, target}};
+        const target = x;
+        return [[0xAE, 0x7F, 0x03, target, 0x00, 0x00, 0x00],[0x7F, 0x03, target]];
 
     - name: 'Room 3 Heater'
       visual:
@@ -234,8 +216,8 @@ homenet_bridge:
         data: [0xAE, 0x7D, 0x04, 0x01, 0x00, 0x00, 0x00]
         ack: [0x7D, 0x04, 0x01]
       command_temperature: !lambda |-
-        uint8_t target = x;
-        return {{0xAE, 0x7F, 0x04, target, 0x00, 0x00, 0x00},{0x7F, 0x04, target}};
+        const target = x;
+        return [[0xAE, 0x7F, 0x04, target, 0x00, 0x00, 0x00],[0x7F, 0x04, target]];
 
   fan:
     - name: 'Ventilator'
@@ -248,9 +230,9 @@ homenet_bridge:
         offset: 3
         data: [0x01]
       state_speed: !lambda |-
-        if (check_value(1, 0x03, data, len)) return 1;
-        if (check_value(1, 0x02, data, len)) return 2;
-        if (check_value(1, 0x01, data, len)) return 3;
+        if (data[1] === 0x03) return 1;
+        if (data[1] === 0x02) return 2;
+        if (data[1] === 0x01) return 3;
         return 0;
       command_on:
         data: [0xC2, 0x4F, 0x05, 0x00, 0x00]
@@ -259,5 +241,5 @@ homenet_bridge:
         data: [0xC2, 0x4F, 0x06, 0x00, 0x00]
         ack: [0x4F, 0x06]
       command_speed: !lambda |-
-        uint8_t speed = 0x04 - ((uint8_t)x);
-        return {{0xC2, 0x4F, speed, 0x00, 0x00},{0x4F, speed}};
+        const speed = 0x04 - x;
+        return [[0xC2, 0x4F, speed, 0x00, 0x00],[0x4F, speed]];
