--- a/deploy/docker/docker-compose.dev.yml
+++ b/deploy/docker/docker-compose.dev.yml
@@ -52,8 +52,8 @@ services:
       SIMULATOR_LINK_PATH: /simshare/rs485-sim-tty
       SIMULATOR_INTERVAL_MS: '500'
       SIMULATOR_PROTOCOL: 'tcp'
-      SIMULATOR_DEVICE: 'samsung_sds' # Options: commax, samsung_sds
-      CONFIG_PATH: packages/core/config/samsung_sds.homenet_bridge.yaml
+      SIMULATOR_DEVICE: 'cvnet' # Options: commax, samsung_sds
+      CONFIG_PATH: packages/core/config/cvnet.homenet_bridge.yaml
     volumes:
       - ../../:/workspace
       - pnpm-store:/root/.local/share/pnpm
@@ -78,12 +78,12 @@ services:
     container_name: rs485-app-dev
     # network_mode: host
     environment:
-      SERIAL_PORT: 192.168.0.83:8888
-      # SERIAL_PORT: rs485-simulator-dev:8888
+      # SERIAL_PORT: 192.168.0.83:8888
+      SERIAL_PORT: rs485-simulator-dev:8888
       MQTT_URL: mqtt://mq:1883
       SERIAL_PATH_WAIT_TIMEOUT_MS: '6000'
       PORT: '3000'
-      CONFIG_FILE: packages/core/config/commax.homenet_bridge.yaml
+      CONFIG_FILE: packages/core/config/cvnet.homenet_bridge.yaml
       LOG_LEVEL: debug
     volumes:
       - ../../:/workspace
