feat: 패킷 간격 통계에 표준편차 및 유휴 발생 간격 분석을 추가하고 개발 환경 Docker 스크립트를 개선했습니다.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "core:build": "pnpm --filter @rs485-homenet/core build",
     "service:build": "pnpm --filter @rs485-homenet/service build",
     "ui:build": "pnpm --filter @rs485-homenet/ui build",
-    "dev:up": "docker compose -f deploy/docker/docker-compose.dev.yml up -d",
-    "dev:down": "docker compose -f deploy/docker/docker-compose.dev.yml down",
+    "dev:up": "docker compose -f deploy/docker/docker-compose.dev.yml up -d app simulator ui",
+    "dev:down": "docker compose -f deploy/docker/docker-compose.dev.yml rm -s -f app simulator ui",
+    "dev:up:all": "docker compose -f deploy/docker/docker-compose.dev.yml up -d",
+    "dev:down:all": "docker compose -f deploy/docker/docker-compose.dev.yml down",
     "dev:logs": "docker compose -f deploy/docker/docker-compose.dev.yml logs -f",
-    "dev:restart": "docker compose -f deploy/docker/docker-compose.dev.yml restart app ui",
+    "dev:restart": "pnpm dev:down && pnpm dev:up",
     "dev:restart:app": "docker compose -f deploy/docker/docker-compose.dev.yml restart app",
     "dev:restart:ui": "docker compose -f deploy/docker/docker-compose.dev.yml restart ui",
     "dev:backend": "docker compose -f deploy/docker/docker-compose.dev.yml up -d app mq simulator",
