--- a/deploy/docker/docker-compose.dev.yml
+++ b/deploy/docker/docker-compose.dev.yml
@@ -78,8 +78,8 @@ services:
     container_name: rs485-app-dev
     # network_mode: host
     environment:
-      # SERIAL_PORT: 192.168.0.83:8888
-      SERIAL_PORT: rs485-simulator-dev:8888
+      SERIAL_PORT: 192.168.0.83:8888
+      # SERIAL_PORT: rs485-simulator-dev:8888
       MQTT_URL: mqtt://mq:1883
       SERIAL_PATH_WAIT_TIMEOUT_MS: '6000'
       PORT: '3000'
