--- a/deploy/docker/docker-compose.dev.yml
+++ b/deploy/docker/docker-compose.dev.yml
@@ -84,7 +84,8 @@ services:
       SERIAL_PATH_WAIT_TIMEOUT_MS: '6000'
       PORT: '3000'
       CONFIG_FILE: packages/core/config/${SYSTEM_TYPE}.homenet_bridge.yaml
-      LOG_LEVEL: debug
+      LOG_LEVEL: info
+      MQTT_TOPIC_PREFIX: homenet
     volumes:
       - ../../:/workspace
       - pnpm-store:/root/.local/share/pnpm
