feat: 패킷 생성 및 파싱을 위한 2바이트 체크섬(xor_add)을 구현하고 관련 설정 및 테스트를 추가했습니다.

--- a/packages/core/config/ezville.homenet_bridge.yaml
+++ b/packages/core/config/ezville.homenet_bridge.yaml
@@ -13,8 +13,8 @@ homenet_bridge:
 
     rx_header: [0xF7]
     tx_header: [0xF7]
-    rx_checksum: xor_add
-    tx_checksum: xor_add
+    rx_checksum2: xor_add
+    tx_checksum2: xor_add
 
   light:
     - name: 'light_1_0'
