--- a/.github/workflows/deploy-addon.yml
+++ b/.github/workflows/deploy-addon.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,7 +16,7 @@ jobs:
       - name: Get version
         id: get_version
         run: |
-          VERSION=$(grep '^version:' hassio-addon/config.yaml | awk '{print $2}' | tr -d '"')
+          VERSION=$(grep '^version:' hassio-addon/config.yaml | awk '{print $2}' | tr -d '"' | tr -d '\r' | xargs)
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Login to Docker Hub
@@ -58,6 +59,7 @@ jobs:
             nubiz/homenet2mqtt:${{ steps.get_version.outputs.VERSION }}
 
   sync-addon-repo:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source
