--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -1,5 +1,5 @@
 name: Homenet2MQTT
-version: 0.0.2_a
+version: 0.0.2_b
 slug: h2m
 description: Bridge between RS485 HomeNet devices and MQTT.
 url: https://github.com/woooook/RS485-HomeNet-to-MQTT-bridge
@@ -16,13 +16,17 @@ map:
     path: /homeassistant
 options:
   log_level: info
-  mqtt_url: mqtt://127.0.0.1:1883
-  mqtt_need_login: false
-  mqtt_user: ""
+  mqtt_url: mqtt://core-mosquitto:1883
+  mqtt_need_login: true
+  mqtt_user: "addons"
   mqtt_passwd: ""
   mqtt_topic_prefix: homenet
   serial_port: 
   config_file: samsung_sds.homenet_bridge.yaml
+hassio_role: default
+hassio_api: true
+services:
+  - mqtt:need
 schema:
   log_level: list(trace|debug|info|warning|error|fatal)
   mqtt_url: str
