chore: Dockerfile에서 멀티 스테이지 빌드를 제거하여 빌드 프로세스를 간소화하고 애드온 버전을 업데이트합니다.

--- a/hassio-addon/Dockerfile
+++ b/hassio-addon/Dockerfile
@@ -1,10 +1,9 @@
-# Build stage
-FROM node:20-alpine AS builder
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Install build dependencies
-RUN apk add --no-cache jq python3 make g++
+# Install jq for parsing options.json
+RUN apk add --no-cache jq
 
 # Install pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
@@ -23,32 +22,8 @@ RUN pnpm install --frozen-lockfile
 COPY . .
 
 # Build packages
+# We need to build core and ui, then service
 RUN pnpm build
-
-# Prune dev dependencies for production
-RUN CI=true pnpm install --prod --frozen-lockfile
-
-# Runtime stage
-FROM node:20-alpine
-
-WORKDIR /app
-
-# Install only runtime dependencies
-RUN apk add --no-cache jq
-
-# Install pnpm (needed for running scripts)
-RUN corepack enable && corepack prepare pnpm@latest --activate
-
-# Copy built files and production dependencies from builder
-COPY --from=builder /app/packages/core/dist ./packages/core/dist
-COPY --from=builder /app/packages/core/package.json ./packages/core/
-COPY --from=builder /app/packages/service/dist ./packages/service/dist
-COPY --from=builder /app/packages/service/static ./packages/service/static
-COPY --from=builder /app/packages/service/package.json ./packages/service/
-COPY --from=builder /app/packages/core/config ./packages/core/config
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 # Environment variables will be set by run.sh
 ENV NODE_ENV=production
