feat: 8099 포트를 추가하고 Svelte UI 디버깅 로그를 조정합니다.

--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -1,5 +1,5 @@
 name: Homenet2MQTT
-version: 0.0.2_g
+version: 0.0.2_h
 slug: h2m
 description: Bridge between RS485 HomeNet devices and MQTT.
 url: https://github.com/woooook/RS485-HomeNet-to-MQTT-bridge
@@ -40,3 +40,5 @@ ingress: true
 ingress_port: 3000
 ingress_entry: /
 panel_icon: mdi:floor-plan
+ports: 
+  8099/tcp : null
