--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -1,5 +1,5 @@
 name: Homenet2MQTT
-version: 0.0.18
+version: 0.0.19
 slug: h2m
 description: Bridge between RS485 HomeNet devices and MQTT (supports multi-port/topic mapping).
 url: https://github.com/woooook/RS485-HomeNet-to-MQTT-bridge
@@ -20,6 +20,7 @@ options:
   mqtt_need_login: true
   mqtt_user: "addons"
   mqtt_passwd: ""
+  mqtt_common_prefix: homenet2mqtt
   mqtt_topic_prefixes:
     - homenet
   serial_ports:
@@ -36,6 +37,7 @@ schema:
   mqtt_need_login: bool
   mqtt_user: str?
   mqtt_passwd: str?
+  mqtt_common_prefix: str?
   mqtt_topic_prefixes:
     - str
   mqtt_topic_prefix: str?
