--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -20,13 +20,9 @@ options:
   mqtt_need_login: true
   mqtt_user: "addons"
   mqtt_passwd: ""
-  mqtt_common_prefix: homenet2mqtt
-  mqtt_topic_prefixes:
-    - homenet
-  serial_ports:
-    - /dev/ttyUSB0
   config_files:
     - samsung_sds.homenet_bridge.yaml
+  mqtt_topic_prefix: homenet2mqtt
 hassio_role: default
 hassio_api: true
 services:
@@ -37,12 +33,7 @@ schema:
   mqtt_need_login: bool
   mqtt_user: str?
   mqtt_passwd: str?
-  mqtt_common_prefix: str?
-  mqtt_topic_prefixes:
-    - str
   mqtt_topic_prefix: str?
-  serial_ports:
-    - str
   config_files:
     - str
 ingress: true
