--- a/packages/core/config/examples/hyundai_imazu.homenet_bridge.yaml
+++ b/packages/core/config/examples/hyundai_imazu.homenet_bridge.yaml
@@ -1,5 +1,7 @@
 homenet_bridge:
   serial:
+    portId: hyundai_imazu
+    path: 192.168.0.83:8888
     baud_rate: 9600
     data_bits: 8
     parity: NONE
