Update Dockerfile to set CI and install dependencies
Added environment variable CI to prevent TTY requirement and installed runtime dependencies for bash, jq, and gcompat.

--- a/hassio-addon/Dockerfile
+++ b/hassio-addon/Dockerfile
@@ -2,6 +2,9 @@
 # node:20-slim (Debian based) is used to avoid QEMU hangs during pnpm install/build on ARM64
 FROM node:20-slim AS builder
 
+# Set CI=true to prevent pnpm from requiring a TTY for commands like prune
+ENV CI=true
+
 WORKDIR /app
 
 # Install pnpm via corepack
@@ -34,6 +37,26 @@ RUN pnpm prune --prod
 # node:20-alpine is used for a smaller runtime image
 FROM node:20-alpine AS runner
 
+WORKDIR /app
+
+# Install runtime dependencies
+# bash: for run.sh script
+# jq: for parsing options.json
+# gcompat: provides glibc compatibility for native modules (like serialport) built in the debian stage
+RUN apk add --no-cache bash jq gcompat
+
+# Copy application from builder
+# This copies everything including node_modules and built dist folders
+COPY --from=builder /app /app
+
+# Environment setup
+ENV NODE_ENV=production
+
+# Setup run script
+COPY hassio-addon/run.sh /run.sh
+RUN chmod +x /run.sh
+
+CMD [ "/run.sh" ]
 WORKDIR /app
 
 # Install runtime dependencies
