Add rate limit to serial test endpoint

--- a/packages/service/tsconfig.json
+++ b/packages/service/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "declaration": false
+    "declaration": false,
+    "paths": {
+      "@rs485-homenet/core": ["../core/src/index.ts"],
+      "@rs485-homenet/core/*": ["../core/src/*"]
+    }
   },
   "include": ["src/**/*"]
 }
