--- a/gallery/commax/elevator.yaml
+++ b/gallery/commax/elevator.yaml
@@ -19,6 +19,7 @@ entities:
         offset: 2
         length: 1
         precision: 0
+        decode: bcd
 
   #명령 0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00, add checksum
   button:
