--- a/gallery/commax/elevator_26.yaml
+++ b/gallery/commax/elevator_26.yaml
@@ -3,7 +3,7 @@ meta:
   name_en: "Elevator Call"
   description: "코맥스 엘리베이터 호출 버튼과 26으로 시작하는 층수 센서 설정입니다."
   description_en: "Commax elevator call button and current floor sensor."
-  version: "1.0.0"
+  version: "1.0.1"
   author: "wooooooooooook"
   tags: ["elevator", "button", "sensor", "commax"]
 
@@ -21,6 +21,7 @@ entities:
         offset: 5
         length: 1
         precision: 0
+        decode: bcd
 
   #명령 0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00, add checksum
   button:
