Add timezone environment option

--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -23,6 +23,7 @@ options:
   config_files:
     - default.homenet_bridge.yaml
   mqtt_topic_prefix: homenet2mqtt
+  timezone: ""
 hassio_role: default
 hassio_api: true
 uart: true
@@ -37,6 +38,7 @@ schema:
   mqtt_topic_prefix: str?
   config_files:
     - str
+  timezone: str?
 ingress: true
 ingress_port: 3000
 ingress_stream: true
