갤러리/문서: CEL 상태 접근을 안전한 헬퍼로 통일하고 kocom min_version 1.16.0 상향
### Motivation
- 갤러리 예제와 문서에서 CEL 표현식이 직접 `state`/`states`를 참조하면 키 누락 시 오류가 발생할 수 있어 안전한 접근 헬퍼로 통일할 필요가 있었습니다.
- 템플릿/반복 구조로 생성되는 갤러리 항목들에서 일관된 헬퍼 사용으로 유지보수성과 안정성을 높이기 위함입니다.
- kocom 갤러리 항목은 새로운 헬퍼 사용과 템플릿 변경으로 최소 지원 버전 표기를 상향해야 했습니다.

### Description
- 갤러리 YAML 파일 전반에서 CEL 내 `states['...']` / `state['...']` 접근을 `get_from_states(entity, attribute)` 및 `get_from_state(attribute)` 호출로 교체했습니다.
- 관련 문서(`docs/CEL_GUIDE.md`, `docs/AUTOMATION.md`, `docs/SCRIPTS.md`, `docs/config-schema/*`)의 예제와 가이드 문구를 헬퍼 사용에 맞게 업데이트했습니다.
- kocom 관련 갤러리 항목의 `min_version`을 `1.16.0`으로 상향하고, 여러 갤러리 항목의 `version` 메타데이터를 소수점 마이너 버전으로 증가시켜 `gallery/list.json` 및 `gallery/list_new.json`을 동기화했습니다.
- 다수의 갤러리 템플릿(예: kocom, bestin, samsung_sds, cvnet 등)에서 시퀀스 번호·상태 참조 로직을 `get_from_states`/`get_from_state`로 안전하게 변환했습니다.

### Testing
- 자동화된 테스트(`pnpm test` 등)는 실행하지 않았습니다; 변경 내용은 갤러리/YAML 및 문서의 정적 리팩토링이라 수동 검토 및 파일 동기화 위주로 처리했습니다.

--- a/gallery/bestin/energy485_AIO.yaml
+++ b/gallery/bestin/energy485_AIO.yaml
@@ -17,7 +17,7 @@ entities:
         - action: update_state
           target_id: "sequence_number"
           state:
-            state_number: "get_from_state('number') != null ? bitAnd(int(get_from_state('number')) + 1, 0xFF) : 0"
+            state_number: "get_from_state('number') == null ? 0 : bitAnd(int(get_from_state('number')) + 1, 0xFF)"
 
     - id: "make_light_packet"
       name: "Light Packet Make"
@@ -43,7 +43,7 @@ entities:
             [0x02, 
             int(0x50 + args.room_number),
             0x0A, 0x12,
-            int(get_from_states('sequence_number', 'number') != null ? get_from_states('sequence_number', 'number') : 0),
+            int(get_from_states('sequence_number', 'number')),
             int(args.ONOFF ? 0x01 : 0x00),
             int(args.position == 4 ? 0x10 : bitShiftLeft(0x01, args.position)),
             0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
@@ -79,7 +79,7 @@ entities:
             [0x02, 
             int(0x50 + args.room_number),
             0x0C, 0x12,
-            int(get_from_states('sequence_number', 'number') != null ? get_from_states('sequence_number', 'number') : 0),
+            int(get_from_states('sequence_number', 'number')),
             0x00, 0x00, 0x00,
             0x01,
             int(args.position + 1),
