--- a/gallery/bestin/climate_new.yaml
+++ b/gallery/bestin/climate_new.yaml
@@ -34,7 +34,7 @@ entities:
         - action: update_state
           target_id: "sequence_number"
           state:
-            state_number: "get_from_state('number') != null ? bitAnd(int(get_from_state('number')) + 1, 0xFF) : 0"
+            state_number: "get_from_state('number') == null ? 0 : bitAnd(int(get_from_state('number')) + 1, 0xFF)"
 
     - id: "make_heating_packet"
       name: "Heating Packet Make"
@@ -48,7 +48,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x28, 0x0E, 0x12, 
-            int(get_from_states('sequence_number', 'number') != null ? get_from_states('sequence_number', 'number') : 0), 
+            int(get_from_states('sequence_number', 'number')), 
             bitAnd(args.room_id, 0x0F), 
             int(args.power), 
             has(args.temp)?(int(args.temp) + (int(args.temp * 10) % 10 >= 5 ? 0x40 : 0)):0,
