--- a/gallery/bestin/energy485_AIO.yaml
+++ b/gallery/bestin/energy485_AIO.yaml
@@ -43,7 +43,7 @@ entities:
             [0x02, 
             int(0x50 + args.room_number),
             0x0A, 0x12,
-            int(get_from_states('sequence_number', 'number')),
+            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0,
             int(args.ONOFF ? 0x01 : 0x00),
             int(args.position == 4 ? 0x10 : bitShiftLeft(0x01, args.position)),
             0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
@@ -79,7 +79,7 @@ entities:
             [0x02, 
             int(0x50 + args.room_number),
             0x0C, 0x12,
-            int(get_from_states('sequence_number', 'number')),
+            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0,
             0x00, 0x00, 0x00,
             0x01,
             int(args.position + 1),
