--- a/gallery/bestin/energy485_general.yaml
+++ b/gallery/bestin/energy485_general.yaml
@@ -35,7 +35,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            int(get_from_states('sequence_number', 'number')), 
+            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
             int(args.room_number),
             int(bitOr(bitShiftLeft(0x01, args.position), args.ONOFF ? 0x80 : 0x00)),
             0x00, 0x00, 0x00, 0x00,
@@ -66,7 +66,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            int(get_from_states('sequence_number', 'number')), 
+            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
             int(args.room_number),
             0x00,
             int(bitOr(bitShiftLeft(0x01, args.position), args.ONOFF ? 0x80 : 0x00)),
@@ -97,7 +97,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            int(get_from_states('sequence_number', 'number')), 
+            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
             int(args.room_number),
             0x00, 0x00,
             int(args.ONOFF ? 0x83 : 0x03),
