Simplify CEL state defaults

--- a/gallery/bestin/climate.yaml
+++ b/gallery/bestin/climate.yaml
@@ -15,7 +15,7 @@ entities:
         - action: update_state
           target_id: "sequence_number"
           state:
-            state_number: "has(state.number) ? bitAnd(state.number + 1, 0xFF) : 0"
+            state_number: "bitAnd(int(get_from_state('number', -1)) + 1, 0xFF)"
 
     - id: "make_heating_packet"
       name: "Heating Packet Make"
@@ -29,7 +29,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x28, 0x0E, 0x12, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             bitAnd(args.room_id, 0x0F), 
             int(args.power), 
             has(args.temp)?(int(args.temp) + (int(args.temp * 10) % 10 >= 5 ? 0x40 : 0)):0,
