--- a/gallery/bestin2.0/dimming_and_outlets_new.yaml
+++ b/gallery/bestin2.0/dimming_and_outlets_new.yaml
@@ -50,7 +50,7 @@ entities:
         - action: update_state
           target_id: "sequence_number"
           state:
-            state_number: "has(state.number) ? bitAnd(state.number + 1, 0xFF) : 0"
+            state_number: "bitAnd(int(get_from_state('number', -1)) + 1, 0xFF)"
 
     - id: "make_light_packet"
       name: "Light Packet Make"
@@ -67,7 +67,7 @@ entities:
           data: >- 
             [bitOr(0x30, args.room_number),
             0x0E, 0x21, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             0x01, 0x00, 
             int(args.position), int(has(args.ONOFF)?args.ONOFF:1), 
             int(has(args.BRIGHTNESS)?args.BRIGHTNESS:0xFF), 
@@ -92,7 +92,7 @@ entities:
         - action: send_packet
           data: >- 
             [bitOr(0x30, args.room_number), 0x09, 0x22, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             0x01, 
             int(args.position), 
             int(args.ONOFF)]
