--- a/gallery/bestin/energy485_general_new.yaml
+++ b/gallery/bestin/energy485_general_new.yaml
@@ -52,7 +52,7 @@ entities:
         - action: update_state
           target_id: "sequence_number"
           state:
-            state_number: "has(state.number) ? bitAnd(state.number + 1, 0xFF) : 0"
+            state_number: "bitAnd(int(get_from_state('number', -1)) + 1, 0xFF)"
 
     - id: "make_light_packet"
       name: "Light Packet Make"
@@ -66,7 +66,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             int(args.room_number),
             int(bitOr(bitShiftLeft(0x01, args.position), args.ONOFF ? 0x80 : 0x00)),
             0x00, 0x00, 0x00, 0x00,
@@ -90,7 +90,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             int(args.room_number),
             0x00,
             int(bitOr(bitShiftLeft(0x01, args.position), args.ONOFF ? 0x80 : 0x00)),
@@ -114,7 +114,7 @@ entities:
         - action: send_packet
           data: >- 
             [0x31, 0x0D, 0x01, 
-            get_from_states('sequence_number', 'number') != null ? int(get_from_states('sequence_number', 'number')) : 0, 
+            int(get_from_states('sequence_number', 'number', 0)), 
             int(args.room_number),
             0x00, 0x00,
             int(args.ONOFF ? 0x83 : 0x03),
