--- a/gallery/bestin/climate_new.yaml
+++ b/gallery/bestin/climate_new.yaml
@@ -4,6 +4,7 @@ meta:
   description: "Bestin 난방 설정입니다. 방 개수를 지정할 수 있습니다. bestin1.0 bestin2.0 공통입니다."
   description_en: "Bestin climate with configurable room count. bestin1.0 bestin2.0 common."
   version: "2.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["climate", "bestin"]
 
