--- a/gallery/bestin/energy485_general.yaml
+++ b/gallery/bestin/energy485_general.yaml
@@ -6,6 +6,7 @@ meta:
   description_en: >- 
     Bestin general gateway light and outlet. Room 1 has 4 lights + 3 outlets, Room 2 has 2 lights + 2 outlets.
   version: "2.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["light", "outlet", "bestin"]
 
