--- a/gallery/bestin/fan.yaml
+++ b/gallery/bestin/fan.yaml
@@ -4,6 +4,7 @@ meta:
   description: "Bestin 환기팬 설정입니다. 3단 속도(약/중/강)와 자연환기 모드를 지원합니다. bestin1.0 bestin2.0 공통입니다."
   description_en: "Bestin ventilation fan with 3-speed control and natural ventilation mode. bestin1.0 bestin2.0 common."
   version: "2.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["fan", "ventilation", "bestin"]
 
