--- a/gallery/cvnet/heaters.yaml
+++ b/gallery/cvnet/heaters.yaml
@@ -4,6 +4,7 @@ meta:
   description: "CVNet 난방 온도조절기 4개 설정입니다."
   description_en: "CVNet 4 heating thermostats."
   version: "1.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["climate", "heater", "thermostat", "cvnet"]
 
@@ -30,9 +31,9 @@ entities:
         data: [0x80]
         mask: [0x80]
       command_off: >-
-        [[0x20, 0x41, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x41, 0x91]]
+        [[0x20, 0x41, 0x01, 0x11, int(get_from_state('target_temperature', 0)), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x41, 0x91]]
       command_heat: >-
-        [[0x20, 0x41, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x41, 0x91]]
+        [[0x20, 0x41, 0x01, 0x11, int(get_from_state('target_temperature', 0)) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x41, 0x91]]
       command_temperature: >-
         [[0x20, 0x41, 0x01, 0x11, int(x) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x41, 0x91]]
 
@@ -57,9 +58,9 @@ entities:
         data: [0x80]
         mask: [0x80]
       command_off: >-
-        [[0x20, 0x42, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x42, 0x91]]
+        [[0x20, 0x42, 0x01, 0x11, int(get_from_state('target_temperature', 0)), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x42, 0x91]]
       command_heat: >-
-        [[0x20, 0x42, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x42, 0x91]]
+        [[0x20, 0x42, 0x01, 0x11, int(get_from_state('target_temperature', 0)) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x42, 0x91]]
       command_temperature: >-
         [[0x20, 0x42, 0x01, 0x11, int(x) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x42, 0x91]]
 
@@ -84,9 +85,9 @@ entities:
         data: [0x80]
         mask: [0x80]
       command_off: >-
-        [[0x20, 0x43, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x43, 0x91]]
+        [[0x20, 0x43, 0x01, 0x11, int(get_from_state('target_temperature', 0)), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x43, 0x91]]
       command_heat: >-
-        [[0x20, 0x43, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x43, 0x91]]
+        [[0x20, 0x43, 0x01, 0x11, int(get_from_state('target_temperature', 0)) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x43, 0x91]]
       command_temperature: >-
         [[0x20, 0x43, 0x01, 0x11, int(x) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x43, 0x91]]
 
@@ -111,8 +112,8 @@ entities:
         data: [0x80]
         mask: [0x80]
       command_off: >-
-        [[0x20, 0x44, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x44, 0x91]]
+        [[0x20, 0x44, 0x01, 0x11, int(get_from_state('target_temperature', 0)), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x44, 0x91]]
       command_heat: >-
-        [[0x20, 0x44, 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x44, 0x91]]
+        [[0x20, 0x44, 0x01, 0x11, int(get_from_state('target_temperature', 0)) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x44, 0x91]]
       command_temperature: >-
         [[0x20, 0x44, 0x01, 0x11, int(x) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, 0x44, 0x91]]
