--- a/gallery/cvnet/heaters_new.yaml
+++ b/gallery/cvnet/heaters_new.yaml
@@ -4,6 +4,7 @@ meta:
   description: "CVNet 난방 온도조절기 설정입니다. 개수를 지정할 수 있습니다."
   description_en: "CVNet heating thermostats. You can specify the number of thermostats."
   version: "2.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["climate", "heater", "thermostat", "cvnet"]
 
@@ -55,8 +56,8 @@ entities:
         data: [0x80]
         mask: [0x80]
       command_off: >-
-        [[0x20, '{{0x40 + i}}', 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, '{{0x40 + i}}', 0x91]]
+        [[0x20, '{{0x40 + i}}', 0x01, 0x11, int(get_from_state('target_temperature', 0)), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, '{{0x40 + i}}', 0x91]]
       command_heat: >-
-        [[0x20, '{{0x40 + i}}', 0x01, 0x11, int(get_from_state('target_temperature') != null ? get_from_state('target_temperature') : 0) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, '{{0x40 + i}}', 0x91]]
+        [[0x20, '{{0x40 + i}}', 0x01, 0x11, int(get_from_state('target_temperature', 0)) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, '{{0x40 + i}}', 0x91]]
       command_temperature: >-
         [[0x20, '{{0x40 + i}}', 0x01, 0x11, int(x) + 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], [0x20, 0x01, '{{0x40 + i}}', 0x91]]
