--- a/gallery/kocom_theart/lights_livingroom.yaml
+++ b/gallery/kocom_theart/lights_livingroom.yaml
@@ -4,6 +4,7 @@ meta:
   description: "코콤 Theart 거실 조명 3개 설정입니다."
   description_en: "Kocom Theart living room with 3 lights."
   version: "2.1.0"
+  min_version: "1.16.0"
   author: "wooooooooooook"
   tags: ["light", "kocom", "theart", "livingroom"]
 
