Add Monaco YAML editor to config modals

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@humanspeak/svelte-virtual-list": "^0.3.6",
+    "monaco-editor": "^0.55.1",
+    "monaco-yaml": "^5.4.0",
     "svelte": "^5.0.0",
     "svelte-i18n": "^4.0.1"
   },
