--- a/gallery/kocom/lights_new.yaml
+++ b/gallery/kocom/lights_new.yaml
@@ -3,7 +3,7 @@ meta:
   name_en: "Lights"
   description: "코콤 조명 설정입니다. 방별 조명 개수를 다르게 설정할 수 있습니다 (최대 4개). v1.16.0 이상에서 사용 가능합니다."
   description_en: "Kocom lights configuration. Configure light count per room (max 4). Available from v1.16.0."
-  version: "2.2.0"
+  version: "2.2.1"
   author: "wooooooooooook"
   tags: ["light", "kocom"]
   min_version: "1.16.0"
@@ -84,15 +84,15 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00, 0xFF,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Light 2 (offset 9)
@@ -110,17 +110,17 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Light 3 (offset 10)
@@ -138,17 +138,17 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00,
-            get_from_states('room_{{room.room_idx}}_light_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Light 4 (offset 11)
@@ -166,13 +166,13 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF, 0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x0E, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_light_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_light_3', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_light_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00, 0, 0, 0, 0], [0x30, 0xDC]]
