Update version and adjust command parameters

--- a/gallery/kocom/heaters_new.yaml
+++ b/gallery/kocom/heaters_new.yaml
@@ -3,7 +3,7 @@ meta:
   name_en: "Heaters"
   description: "코콤 난방 온도조절기 설정입니다. 난방 개수를 설정할 수 있습니다."
   description_en: "Kocom heating thermostats configuration. You can configure the number of thermostats."
-  version: "2.0.0"
+  version: "2.0.1"
   author: "wooooooooooook"
   tags: ["climate", "heater", "thermostat", "kocom"]
 
@@ -57,8 +57,8 @@ entities:
       # mode: off=0x01, heat=0x11 ?
       # heater_new logic: cmd_off -> mode 0x01. cmd_heat -> mode 0x11.
       command_off: >-
-        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x01, 0x00, target, 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
+        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x01, 0x00, int(x), 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
       command_heat: >-
-        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x11, 0x00, target, 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
+        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x11, 0x00, int(x), 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
       command_temperature: >-
-        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x11, 0x00, target, 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
+        [[0x30, 0xbc, 0x00, 0x36, '{{i - 1}}', 0x01, 0x00, 0x00, 0x11, 0x00, int(x), 0x00, 0x00, 0x00, 0x00, 0x00], [0x30, 0xdc]]
