--- a/gallery/hyundai_imazu/fan.yaml
+++ b/gallery/hyundai_imazu/fan.yaml
@@ -3,21 +3,21 @@ meta:
   name_en: "Ventilation System"
   description: "현대 이마주 환기시스템 설정입니다. 3단 속도를 지원합니다."
   description_en: "Hyundai Imazu ventilation system with 3-speed control."
-  version: "2.0.0"
+  version: "2.0.1"
   author: "wooooooooooook"
   tags: ["fan", "ventilation", "hyundai", "imazu"]
 
 discovery:
   match:
     data: [0x00, 0x01, 0x2b, 0x04, 0x40, 0x11]
-    mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
+    mask: [0x00, 0xff, 0xff, 0xff, 0xf0, 0xff]
     
 entities:
   fan:
     - name: 'Room 1 Fan 1'
       state:
         data: [0x00, 0x01, 0x2b, 0x04, 0x40, 0x11]
-        mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
+        mask: [0x00, 0xff, 0xff, 0xff, 0xf0, 0xff]
       state_on:
         offset: 7
         data: [0x01]
