Add ids to Hyundai Imazu gallery entities

--- a/gallery/hyundai_imazu/heaters.yaml
+++ b/gallery/hyundai_imazu/heaters.yaml
@@ -13,6 +13,7 @@ entities:
 
   climate:
     - name: 'Room 1 Heater 1'
+      id: 'room_1_heater_1'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
@@ -57,6 +58,7 @@ entities:
         [[0x0B, 0x01, 0x18, 0x02, 0x45, 0x10, x, 0x00],[0x0D, 0x01, 0x18, 0x04, 0x45, 0x10, x, 0x01]]
 
     - name: 'Room 1 Heater 2'
+      id: 'room_1_heater_2'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
@@ -101,6 +103,7 @@ entities:
         [[0x0B, 0x01, 0x18, 0x02, 0x45, 0x11, x, 0x00],[0x0D, 0x01, 0x18, 0x04, 0x45, 0x11, x, 0x01]]
 
     - name: 'Room 1 Heater 3'
+      id: 'room_1_heater_3'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
@@ -145,6 +148,7 @@ entities:
         [[0x0B, 0x01, 0x18, 0x02, 0x45, 0x12, x, 0x00],[0x0D, 0x01, 0x18, 0x04, 0x45, 0x12, x, 0x01]]
 
     - name: 'Room 1 Heater 4'
+      id: 'room_1_heater_4'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
@@ -189,6 +193,7 @@ entities:
         [[0x0B, 0x01, 0x18, 0x02, 0x45, 0x13, x, 0x00],[0x0D, 0x01, 0x18, 0x04, 0x45, 0x13, x, 0x01]]
 
     - name: 'Room 1 Heater 5'
+      id: 'room_1_heater_5'
       visual:
         min_temperature: 18 °C
         max_temperature: 30 °C
