--- a/gallery/hyundai_imazu/lights.yaml
+++ b/gallery/hyundai_imazu/lights.yaml
@@ -11,6 +11,7 @@ entities:
   light:
     # Room 1 (4 Lights)
     - name: 'Room 1 Light 1'
+      id: 'room_1_light_1'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -28,6 +29,7 @@ entities:
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x11, 0x02, 0x02]
 
     - name: 'Room 1 Light 2'
+      id: 'room_1_light_2'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x12]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -45,6 +47,7 @@ entities:
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x12, 0x02, 0x02]
 
     - name: 'Room 1 Light 3'
+      id: 'room_1_light_3'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x13]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -62,6 +65,7 @@ entities:
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x13, 0x02, 0x02]
 
     - name: 'Room 1 Light 4'
+      id: 'room_1_light_4'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x14]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -80,6 +84,7 @@ entities:
 
     # Room 2 (3 Lights)
     - name: 'Room 2 Light 1'
+      id: 'room_2_light_1'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x21]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -97,6 +102,7 @@ entities:
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x21, 0x02, 0x02]
 
     - name: 'Room 2 Light 2'
+      id: 'room_2_light_2'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x22]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
@@ -114,6 +120,7 @@ entities:
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x22, 0x02, 0x02]
 
     - name: 'Room 2 Light 3'
+      id: 'room_2_light_3'
       state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x23]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
