--- a/gallery/hyundai_imazu/lights_all_off.yaml
+++ b/gallery/hyundai_imazu/lights_all_off.yaml
@@ -15,6 +15,7 @@ discovery:
 entities:
   switch:
     - name: 'All Lights Off'
+      id: 'all_lights_off'
       state:
         data: [0x00, 0x01, 0x2a, 0x04, 0x40, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
