Fix state_preset_mode logic in air_purifier.yaml

--- a/gallery/ezville/air_purifier.yaml
+++ b/gallery/ezville/air_purifier.yaml
@@ -51,7 +51,7 @@ entities:
         data[7] == 0x02 ? "약" :
         (data[7] == 0x03 ? "중" :
         (data[7] == 0x04 ? "강" :
-        (data[7] == 0x05 ? "터보" : "off")))
+        (data[7] == 0x05 ? "터보" : "")))
       command_preset_mode: >-
         xstr == "약" ? [0x61, '{{i}}', 0x42, 0x01, 0x02] :
         (xstr == "중" ? [0x61, '{{i}}', 0x42, 0x01, 0x03] :
