Update command_preset_mode to use int() for i

--- a/gallery/ezville/air_purifier.yaml
+++ b/gallery/ezville/air_purifier.yaml
@@ -53,7 +53,7 @@ entities:
         (data[7] == 0x04 ? "강" :
         (data[7] == 0x05 ? "터보" : "")))
       command_preset_mode: >-
-        xstr == "약" ? [0x61, '{{i}}', 0x42, 0x01, 0x02] :
-        (xstr == "중" ? [0x61, '{{i}}', 0x42, 0x01, 0x03] :
-        (xstr == "강" ? [0x61, '{{i}}', 0x42, 0x01, 0x04] :
-        [0x61, '{{i}}', 0x42, 0x01, 0x05]))
+        xstr == "약" ? [0x61, int({{i}}), 0x42, 0x01, 0x02] :
+        (xstr == "중" ? [0x61, int({{i}}), 0x42, 0x01, 0x03] :
+        (xstr == "강" ? [0x61, int({{i}}), 0x42, 0x01, 0x04] :
+        [0x61, int({{i}}), 0x42, 0x01, 0x05]))
